test/mlir/for_bad_case_3.mlir.stderr
test/mlir/for_bad_case_3.mlir:3:8: error: 'colgm.for' op yield has 0 operands but op has 1 results
  %0 = colgm.for %i = %lb to %ub iter_args(%acc = %init) -> tensor<f32> {
       ^
test/mlir/for_bad_case_3.mlir:3:8: note: see current operation: 
%0 = "colgm.for"(%arg0, %arg1, %arg2) ({
^bb0(%arg3: index, %arg4: tensor<f32>):
  "colgm.yield"() : () -> ()
}) : (index, index, tensor<f32>) -> tensor<f32>
